docs: 同步 Payload 生成与角色显示名的中英文文档与进度
- README.md / README.en.md：导航、配置页分组、项目结构、Payload 生成章节、测试入口
- PROGRESS.md：三条状态与一条已完成阶段，后续可做改写为已落地事实
- docs/DESIGN-payload.md：实施顺序逐项标记完成，新增实测与原设计的差异表
- AI_REPORT.md：本轮章节（需求、实现、实测数据、两个真实缺陷的根因与修法、局限）